<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/page_log_in_page_ek1"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/_bg__log_in_page_ek2"
                android:background="@drawable/_bg__log_in_page_ek2_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="375dp"
                android:layout_height="812dp" />

            <View
                android:id="@+id/log_in_page__background_mask_"
                android:background="@drawable/log_in_page__background_mask__shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="375dp"
                android:layout_height="812dp" />

            <View
                android:id="@+id/log_in_page__background_mask__ek1"
                android:background="@drawable/log_in_page__background_mask__ek1_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Checkbox Layout -->
            <RelativeLayout android:id="@+id/terms_ofuse"
                android:layout_marginTop="529dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox android:id="@+id/check_mark"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="#FF7D0D"
                    android:alpha="0.15000000596046" />

                <TextView android:id="@+id/i_agree_and_accept_the_terms_ot_use_"
                    android:textSize="13sp"
                    android:textColor="@color/i_agree_and_accept_the_terms_ot_use__color"
                    android:layout_marginLeft="27dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="236.5dp"
                    android:layout_height="25.5dp"
                    android:text="@string/i_agree_and_accept_the_terms_ot_use__string" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sub_text"
                android:layout_marginTop="569dp"
                android:layout_marginStart="122dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/noAccount"
                    android:textSize="13sp"
                    android:textColor="@color/forgot_password__color"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="124.5dp"
                    android:layout_height="25.5dp"
                    android:text="Already has a user?" />


                <TextView
                    android:id="@+id/or"
                    android:textSize="16sp"
                    android:textColor="@color/or_color"
                    android:layout_marginLeft="58dp"
                    android:layout_marginTop="85dp"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:text="@string/or_string" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/button"
                android:layout_marginTop="601dp"
                android:layout_marginStart="20dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="335dp"
                    android:layout_height="40dp"
                    app:backgroundTint="@null"
                    android:background="@drawable/login_button_rounded"
                    android:textSize="16sp"
                    android:textColor="@color/_bg__log_in_page_ek2_color"
                    android:text="SIGN UP" />

                <RelativeLayout
                    android:id="@+id/log_in_button_ek1"
                    android:layout_marginTop="72dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/log_in_with_google"
                        android:layout_width="335dp"
                        android:layout_height="40dp"
                        app:backgroundTint="@null"
                        android:background="@color/white"
                        android:textSize="16sp"
                        android:textColor="@color/log_in_with_google_color"
                        app:iconTint="@null"
                        app:icon="@drawable/logo"
                        android:text="@string/log_in_with_google_string" />

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/password"
                android:layout_marginTop="420dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_marginTop="54dp"
                    android:layout_width="335dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ek2_shape"
                    android:hint="@string/password_ek1_string"
                    android:inputType="textPassword"
                    android:textColor="@color/password_ek1_color" />

                <RelativeLayout
                    android:id="@+id/eye"
                    android:layout_marginTop="72dp"
                    android:layout_marginStart="300dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/vector"
                        android:src="@drawable/vector"
                        android:contentDescription="Show/Hide Password"
                        android:layout_width="18dp"
                        android:layout_height="13dp" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/email"
                android:layout_marginTop="370dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_marginTop="54dp"
                    android:layout_width="335dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ek3_shape"
                    android:hint="@string/email_ek1_string"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/log_in_with_google_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/username"
                android:layout_marginTop="320dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerUsername"
                    android:layout_marginTop="54dp"
                    android:layout_width="335dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ek3_shape"
                    android:hint="Username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/log_in_with_google_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/name"
                android:layout_marginTop="270dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerDisplayName"
                    android:layout_marginTop="54dp"
                    android:layout_width="335dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ek3_shape"
                    android:hint="Name"
                    android:inputType="text"
                    android:textColor="@color/log_in_with_google_color" />
            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView				android:id="@+id/registerProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="158dp"
                android:layout_marginTop="220dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onProfileImageClicked"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_img" />

            <RelativeLayout
                android:id="@+id/title_ek2"
                android:layout_marginTop="150dp"
                android:layout_marginStart="146dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/log_in_ek1"
                    android:textSize="30sp"
                    android:textColor="@color/log_in_with_google_color"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="119dp"
                    android:layout_height="59dp"
                    android:text="Sign Up" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/logo_ek1"
                android:layout_marginTop="30dp"
                android:layout_marginStart="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/enjoy_your_traveling"
                    android:textSize="16sp"
                    android:textColor="@color/log_in_with_google_color"
                    android:layout_marginLeft="41dp"
                    android:layout_marginTop="70dp"
                    android:layout_width="165dp"
                    android:layout_height="31dp"
                    android:text="@string/enjoy_your_traveling_string" />

                <ImageView
                    android:id="@+id/logo_ek2"
                    android:src="@drawable/logo_ek2"
                    android:contentDescription="Logo"
                    android:layout_width="256dp"
                    android:layout_height="86dp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
